--- a/src/main/webapp/produto.xhtml
+++ b/src/main/webapp/produto.xhtml
@@ -30,11 +30,17 @@
 					action="#{produtoBean.salvar}" update="@form"
 					style="margin-right:20px;" />
 			</h:panelGrid>			 
-        <p:outputLabel for="@next" value="Basic:" />
-        <p:selectOneMenu id="console" var="m" value="#{marcaBean.lista}" style="width:125px">
-            <f:selectItem itemLabel="#{m.nome}" itemValue="" />
+        <p:outputLabel for="marca" value="Marca" />
+        <p:selectOneMenu id="marca"  value="#{fornecedorBean.lista}" style="width:125px">
+            <f:selectItem itemLabel="Fornecedor" noSelectionOption="true"/>
+            <f:selectItems var="f" value="#{fornecedorBean.lista}" itemLabel="#{f.nome}" itemValue="#{f}" />
         </p:selectOneMenu>
 			</div>
+			<p:dataTable var="m" value="#{categoriaBean.lista}">
+				<p:column headerText="Nome">
+					<h:outputText value="#{m.nome}" />
+				</p:column>
+			</p:dataTable>
 		</h:form>
 	</ui:define>
 </ui:composition>
