--- a/src/main/webapp/cadastroPlataforma.xhtml
+++ b/src/main/webapp/cadastroPlataforma.xhtml
@@ -12,10 +12,25 @@
 <h:body>
 	<div id="header">
 		<ui:insert name="header">
-			<ui:include src="/WEB-INF/template/MenuVendedor.xhtml" />
+			<ui:include src="/WEB-INF/template/menuVendedor.xhtml" />
 		</ui:insert>
 		<div>
-
+			<h:form>
+				<p:growl autoUpdate="true" life="3000" />
+				<div id="main" align="center">
+					<p:panelGrid columns="2" layout="grid"
+						styleClass="showcase-text-align-center">
+						<p:outputLabel value="Nome" for="nome" />
+						<p:inputText id="nome" value="#{plataformaBean.plataforma.nome}"
+							placeholder="Digite o nome da plataforma" />
+						<p:outputLabel value="Sigla SKU" for="sku" />
+						<p:inputText id="sku" value="#{plataformaBean.plataforma.codigoSku}"
+							placeholder="Digite a sigla do sku" />	
+					</p:panelGrid>
+					<p:commandButton value="Salvar" action="#{plataformaBean.salvar()}"
+						update="@form" />
+				</div>
+			</h:form>
 		</div>
 		<div id="footer">
 			<ui:insert name="footer">
