--- a/src/main/webapp/produto.xhtml
+++ b/src/main/webapp/produto.xhtml
@@ -1,11 +1,20 @@
-<ui:composition template="/WEB-INF/template/MenuGenerico.xhtml"
-	xmlns="http://www.w3.org/1999/xhtml"
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
-	<ui:define name="corpo">
+	xmlns:f="http://xmlns.jcp.org/jsf/core">
+<h:head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>Cadastro de Produto</title>
 
+</h:head>
+<h:body>
+	<div id="header">
+		<ui:insert name="header">
+			<ui:include src="/WEB-INF/template/menuVendedor.xhtml" />
+		</ui:insert>
 		<h:form>
 			<p:growl autoUpdate="true" life="1000" />
 			<div align="center">
@@ -36,11 +45,17 @@
             <f:selectItems var="f" value="#{fornecedorBean.lista}" itemLabel="#{f.nome}" itemValue="#{f}" />
         </p:selectOneMenu>
 			</div>
-			<p:dataTable var="m" value="#{categoriaBean.lista}">
+			<p:dataTable var="m" value="#{marcaBean.lista}">
 				<p:column headerText="Nome">
 					<h:outputText value="#{m.nome}" />
 				</p:column>
 			</p:dataTable>
 		</h:form>
-	</ui:define>
-</ui:composition>
+		<div id="footer">
+			<ui:insert name="footer">
+				<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
+			</ui:insert>
+		</div>
+	</div>
+</h:body>
+</html>
