Arrumando as telas para ajustar com o menu

--- a/src/main/webapp/cadastroMarca.xhtml
+++ b/src/main/webapp/cadastroMarca.xhtml
@@ -8,29 +8,31 @@
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Cadastro de Marca</title>
-	
+
 </h:head>
 <h:body>
 	<div id="header">
 		<ui:insert name="header">
 			<ui:include src="/WEB-INF/template/menuVendedor.xhtml" />
 		</ui:insert>
-		<h:form>
-			<p:growl autoUpdate="true" life="3000" />
-			<div id="main" align="center">
-				<p:panelGrid columns="2" layout="grid"
-					styleClass="showcase-text-align-center">
-					<p:outputLabel value="Nome" for="nome" />
-					<p:inputText id="nome" value="#{marcaBean.marca.nome}" placeholder="Digite o nome da marca"/>
-				</p:panelGrid>
-				<p:commandButton value="Salvar" action="#{marcaBean.salvar()}" update="@form"/>
-			</div>
-		</h:form>
-		<div id="footer">
-			<ui:insert name="footer">
-				<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
-			</ui:insert>
+	</div>
+	<h:form>
+		<p:growl autoUpdate="true" life="3000" />
+		<div id="main" align="center">
+			<p:panelGrid columns="2" layout="grid"
+				styleClass="showcase-text-align-center">
+				<p:outputLabel value="Nome" for="nome" />
+				<p:inputText id="nome" value="#{marcaBean.marca.nome}"
+					placeholder="Digite o nome da marca" />
+			</p:panelGrid>
+			<p:commandButton value="Salvar" action="#{marcaBean.salvar()}"
+				update="@form" />
 		</div>
+	</h:form>
+	<div id="footer">
+		<ui:insert name="footer">
+			<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
+		</ui:insert>
 	</div>
 </h:body>
 </html>
