--- a/src/main/webapp/cadastroAdministrador.xhtml
+++ b/src/main/webapp/cadastroAdministrador.xhtml
@@ -7,17 +7,14 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Cadastro de Fornecedor</title>
-
+	<title>Cadastro de Categoria</title>
 </h:head>
 <h:body>
 	<div id="header">
 		<ui:insert name="header">
-			<ui:include src="/WEB-INF/template/menuVendedor.xhtml" />
+			<ui:include src="/WEB-INF/template/MenuAdministrador.xhtml" />
 		</ui:insert>
 	</div>
-	<h:form>
-	</h:form>
 	<div id="footer">
 		<ui:insert name="footer">
 			<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
