--- a/src/main/webapp/cadastroCategoria.xhtml
+++ b/src/main/webapp/cadastroCategoria.xhtml
@@ -14,22 +14,24 @@
 		<ui:insert name="header">
 			<ui:include src="/WEB-INF/template/menuVendedor.xhtml" />
 		</ui:insert>
-		<h:form>
-			<p:growl autoUpdate="true" life="3000" />
-			<div id="main" align="center">
-				<p:panelGrid columns="2" layout="grid"
-					styleClass="showcase-text-align-center">
-					<p:outputLabel value="Nome" for="nome" />
-					<p:inputText id="nome" value="#{categoriaBean.categoria.nome}" placeholder="Digite o nome da categoria"/>
-				</p:panelGrid>
-				<p:commandButton value="Salvar" action="#{categoriaBean.salvar()}" update="@form"/>
-			</div>
-		</h:form>
-		<div id="footer">
-			<ui:insert name="footer">
-				<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
-			</ui:insert>
+	</div>
+	<h:form>
+		<p:growl autoUpdate="true" life="3000" />
+		<div id="main" align="center">
+			<p:panelGrid columns="2" layout="grid"
+				styleClass="showcase-text-align-center">
+				<p:outputLabel value="Nome" for="nome" />
+				<p:inputText id="nome" value="#{categoriaBean.categoria.nome}"
+					placeholder="Digite o nome da categoria" />
+			</p:panelGrid>
+			<p:commandButton value="Salvar" action="#{categoriaBean.salvar()}"
+				update="@form" />
 		</div>
+	</h:form>
+	<div id="footer">
+		<ui:insert name="footer">
+			<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
+		</ui:insert>
 	</div>
 </h:body>
 </html>
