--- a/src/main/webapp/cadastroCliente.xhtml
+++ b/src/main/webapp/cadastroCliente.xhtml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:h="http://xmlns.jcp.org/jsf/html"
-	  xmlns:f="http://xmlns.jcp.org/jsf/core"
-	  xmlns:p="http://primefaces.org/ui"
-	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-	  
-<h:head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<title>Compre Seu Jogo - Cliente</title>
+<h:head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+	<title>Compre Seu Jogo - Cliente</title>
 
 </h:head>
 <h:body>
-	
-	
-    <h3>Cadastro de Cliente</h3>
-    <div class="ui-fluid p-formgrid p-grid">
-    	<h:form>
-            <p:outputLabel  value="Nome" />
-            <p:inputText id="nome" value="#{clienteBean.cliente.nome}"/>
-            
-            <p:outputLabel  value="Sobrenome" />
-            <p:inputText id="sobrenome" value="#{clienteBean.cliente.sobrenome}"/>
+	<div id="header">
+		<ui:insert name="header">
+			<ui:include src="/WEB-INF/template/MenuAdministrador.xhtml" />
+		</ui:insert>
+	</div>
 
-            <p:outputLabel value="CPF"/>
-            <p:inputMask id="cpf" value="#{clienteBean.cliente.cpf}" mask="999.999.999-99"/>
+	<h3>Cadastro de Cliente</h3>
+	<div class="ui-fluid p-formgrid p-grid">
+		<h:form>
+			<p:outputLabel value="Nome" />
+			<p:inputText id="nome" value="#{clienteBean.cliente.nome}" />
 
-            <p:outputLabel value="Telefone" />
+			<p:outputLabel value="Sobrenome" />
+			<p:inputText id="sobrenome" value="#{clienteBean.cliente.sobrenome}" />
+
+			<p:outputLabel value="CPF" />
+			<p:inputMask id="cpf" value="#{clienteBean.cliente.cpf}"
+				mask="999.999.999-99" />
+
+			<p:outputLabel value="Telefone" />
 			<p:inputMask id="telefone" value="#{clienteBean.cliente.telefone}"
 				mask="(99)99999-9999" />
 
@@ -58,14 +63,21 @@
 				<f:selectItem itemLabel="Option 3" itemValue="Option 3" />
 			</p:selectOneMenu>
 
-            <p:outputLabel for="email" value="Email" />
+			<p:outputLabel for="email" value="Email" />
 			<p:inputText id="email" value="#{clienteBean.cliente.email}" />
 
 			<p:outputLabel for="senha" value="Senha" />
-			<p:password id="senha"  required = "true" value="#{clienteBean.cliente.senha}" />
+			<p:password id="senha" required="true"
+				value="#{clienteBean.cliente.senha}" />
 
-        		<p:commandButton value="Salvar" id="salvar" action="#{clienteBean.salvar}" style="margin-center:20px;"/>
+			<p:commandButton value="Salvar" id="salvar"
+				action="#{clienteBean.salvar}" style="margin-center:20px;" />
 		</h:form>
-    </div>
+	</div>
+	<div id="footer">
+		<ui:insert name="footer">
+			<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
+		</ui:insert>
+	</div>
 </h:body>
 </html>
