novo teste vendedor

--- a/src/main/webapp/cadastroVendedor.xhtml
+++ b/src/main/webapp/cadastroVendedor.xhtml
@@ -23,7 +23,8 @@
 		<h:form id="form1">
     		<p:growl id="msgs" showDetail="true" showSummary="true" autoUpdate="true" life="3000"/>
     		<div align = "center">
-    			<p:panel header="Dados Pessoais"> 
+    			<p:panel header="Dados Pessoais">
+    			<h2 align="center">Novo Cliente</h2>
     				<h:panelGrid columns="4" cellpadding="8" style="margin:100px"> 
 						<p:outputLabel value="Nome" />
 						<p:inputText id="nome" value="#{vendedorBean.vendedor.nome}" required="true" />
