--- a/src/main/webapp/cadastroFornecedor.xhtml
+++ b/src/main/webapp/cadastroFornecedor.xhtml
@@ -5,23 +5,12 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Cadastro de Fornecedor</title>
-
-</h:head>
-<h:body>
-	<div id="header">
-		<ui:insert name="header">
-			<ui:include src="/WEB-INF/template/menuVendedor.xhtml" />
-		</ui:insert>
-	</div>
-	<h:form>
-	</h:form>
-	<div id="footer">
-		<ui:insert name="footer">
-			<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
-		</ui:insert>
-	</div>
-</h:body>
+<ui:composition template="/WEB-INF/template/template.xhtml">
+	<ui:define name="tituloJanela">Cadastro fornecedor</ui:define>
+	<ui:define name="conteudo">
+		<h:form>
+			<p:growl autoUpdate="true" life="3000" />
+		</h:form>
+	</ui:define>
+</ui:composition>
 </html>
