--- a/src/main/webapp/cadastroPlataforma.xhtml
+++ b/src/main/webapp/cadastroPlataforma.xhtml
@@ -5,36 +5,28 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Cadastro de Plataforma</title>
-</h:head>
-<h:body>
-	<div id="header">
-		<ui:insert name="header">
-			<ui:include src="/WEB-INF/template/menuVendedor.xhtml" />
-		</ui:insert>
-	</div>
-	<h:form>
-		<p:growl autoUpdate="true" life="3000" />
-		<div id="main" align="center">
-			<p:panelGrid columns="2" layout="grid"
-				styleClass="showcase-text-align-center">
-				<p:outputLabel value="Nome" for="nome" />
-				<p:inputText id="nome" value="#{plataformaBean.plataforma.nome}"
-					placeholder="Digite o nome da plataforma" />
-				<p:outputLabel value="Sigla SKU" for="sku" />
-				<p:inputText id="sku" value="#{plataformaBean.plataforma.codigoSku}"
-					placeholder="Digite a sigla do sku" />
-			</p:panelGrid>
-			<p:commandButton value="Salvar" action="#{plataformaBean.salvar()}"
-				update="@form" />
-		</div>
-	</h:form>
-	<div id="footer">
-		<ui:insert name="footer">
-			<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
-		</ui:insert>
-	</div>
-</h:body>
+<ui:composition template="/WEB-INF/template/template.xhtml">
+	<ui:define name="tituloJanela">Cadastro Plataforma</ui:define>
+	<ui:define name="conteudo">
+		<h:form>
+			<h:form>
+				<p:growl autoUpdate="true" life="3000" />
+				<div id="main" align="center">
+					<p:panelGrid columns="2" layout="grid"
+						styleClass="showcase-text-align-center">
+						<p:outputLabel value="Nome" for="nome" />
+						<p:inputText id="nome" value="#{plataformaBean.plataforma.nome}"
+							placeholder="Digite o nome da plataforma" />
+						<p:outputLabel value="Sigla SKU" for="sku" />
+						<p:inputText id="sku"
+							value="#{plataformaBean.plataforma.codigoSku}"
+							placeholder="Digite a sigla do sku" />
+					</p:panelGrid>
+					<p:commandButton value="Salvar" action="#{plataformaBean.salvar()}"
+						update="@form" />
+				</div>
+			</h:form>
+		</h:form>
+	</ui:define>
+</ui:composition>
 </html>
