--- a/src/main/webapp/cadastroProduto.xhtml
+++ b/src/main/webapp/cadastroProduto.xhtml
@@ -45,7 +45,7 @@
 					<p:commandButton value="Submit" ajax="false"
 						action="#{fileUploadView.upload}" disabled="true" />
 					<p:outputLabel for="categoria" value="Categoria" />
-					<p:selectOneMenu id="categoria" value="#{categoriaBean.lista}"
+					<p:selectOneMenu id="categoria" value="#{produtoBean.produto.categoria}"
 						style="width:200px">
 						<f:selectItem itemLabel="Selecione uma opção"
 							noSelectionOption="true" />
