--- a/src/main/webapp/cadastroVendedor.xhtml
+++ b/src/main/webapp/cadastroVendedor.xhtml
@@ -91,8 +91,8 @@
 
 
 							<p:commandButton value="Salvar" id="salvar"
-								action="#{vendedorBean.salvar}" style="margin-center:20px;"
-								update=":form1:msgs, :form1" />
+								action="#{vendedorBean.salvar}"
+								update="@form" />
 
 							<p:commandButton value="Limpar" ajax="true" immediate="true"
 								type="reset" />
